<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_background_1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/my_border"
        android:orientation="horizontal" >

        <ImageView android:id="@+id/picbox"
            android:layout_width="200dp"
            android:layout_height="320dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/hello_world"/>
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <Spinner
	        android:id="@+id/CbxCatalog"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/CbxCatalog" />
        
        <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:padding="5dp"
	        android:gravity="center_horizontal" >
	        
	        <Button android:id="@+id/btnCapture"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:text="@string/btnCapture"
	            android:background="@drawable/my_button"
	            style="@style/ButtonText"/>
	        
	        <Button android:id="@+id/btnOpenPic"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:text="@string/btnOpenPic"
	            android:background="@drawable/my_button"
	            style="@style/ButtonText"/>
	        
	        <Button android:id="@+id/btnSearch"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:text="@string/btnSearch"
	            android:background="@drawable/my_button"
	            style="@style/ButtonText"/>
    	</LinearLayout>
        
    </LinearLayout>
    
    

</LinearLayout>